<resources>
    <string name="app_name">FirstApp</string>
    <string name="email">Email</string>
    <string name="passwords">Password</string>
    <string name="login">Login</string>
    <string name="go_to_register">Go to Register</string>

    <string name="requiered_email">Email is required</string>
    <string name="requiered_password">Password is required</string>
    <string name="requiered_name">Name is required</string>

    <string name="error_match">No match</string>
    <string name="logged">Logged in</string>
    <string name="registered">Registered</string>

    <string name="name">name</string>
    <string name="register">register</string>
    <string name="go_to_login">go to login</string>
    <string name="loggout">Logout</string>

    <string name="task_name">Task name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="want_to_delete">Do you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clean_list">Clean List</string>
    <string name="profile">Profile</string>
    <string name="my_task">My task</string>

    <string name="name_placeholder">Admin todopoderoso</string>
    <string name="email_placeholder">admin@email.com</string>
</resources>